# daml

./: CODEOWNERS  WORKSPACE  bazel-haskell-deps.bzl  deps.bzl  security-evidence.md
bazel_tools/: fat_cc_library.bzl  haskell-m1-debug.patch  os_info.bzl
ci/patch_bazel_windows/: compile.yml
daml-assistant/integration-tests/src/DA/Daml/Assistant/: IntegrationTests.hs
ledger-service/http-json/src/failure/scala/http/: FailureTests.scala
ledger-service/http-json/src/it/scala/http/: HttpServiceIntegrationTestUserManagement.scala
ledger-service/http-json/src/itlib/scala/http/: AbstractHttpServiceIntegrationTest.scala
ledger/error/src/main/scala/com/daml/error/definitions/: TransactionError.scala
ledger/error/src/main/scala/com/daml/error/samples/: Example.scala
ledger/ledger-api-common/src/test/suite/scala/com/digitalasset/platform/server/api/validation/: ErrorFactoriesSpec.scala
ledger/participant-integration-api/src/main/scala/platform/apiserver/services/admin/: SynchronousResponse.scala
ledger/participant-integration-api/src/main/scala/platform/store/backend/common/: EventStorageBackendTemplate.scala  QueryStrategy.scala
ledger/participant-integration-api/src/test/suite/scala/platform/apiserver/error/: ErrorInterceptorSpec.scala
navigator/frontend/: BUILD.bazel  jest.config.js  package.json  tsconfig.json
navigator/frontend/src/ui-core/src/api/: IdentifierShortening.test.ts
nix/: bazel.nix  default.nix  nixpkgs.nix
nix/tools/bazel-cc-toolchain/: default.nix
repro/: BUILD.bazel  Lib.hs  Lib.hsc  Pure.hs  add.c  cabal-hs.cabal  cabal-hsc.cabal  clib.h  main.cc
